src/host/pantilt_in_ada/specs/libusb_1_0_libusb_h.ads


   function libusb_set_auto_detach_kernel_driver (dev : System.Address; enable : int) return int;  -- /usr/include/libusb-1.0/libusb.h:1393
   pragma Import (C, libusb_set_auto_detach_kernel_driver, "libusb_set_auto_detach_kernel_driver");

   function libusb_control_transfer_get_data (transfer : access libusb_transfer) return access unsigned_char;  -- /usr/include/libusb-1.0/libusb.h:1410
   pragma Import (C, libusb_control_transfer_get_data, "libusb_control_transfer_get_data");

   function libusb_control_transfer_get_setup (transfer : access libusb_transfer) return access libusb_control_setup;  -- /usr/include/libusb-1.0/libusb.h:1428
   pragma Import (C, libusb_control_transfer_get_setup, "libusb_control_transfer_get_setup");

   procedure libusb_fill_control_setup
     (buffer : access unsigned_char;
      bmRequestType : stdint_h.uint8_t;
      bRequest : stdint_h.uint8_t;
      wValue : stdint_h.uint16_t;
      wIndex : stdint_h.uint16_t;
      wLength : stdint_h.uint16_t);  -- /usr/include/libusb-1.0/libusb.h:1457
   pragma Import (C, libusb_fill_control_setup, "libusb_fill_control_setup");

   function libusb_alloc_transfer (iso_packets : int) return access libusb_transfer;  -- /usr/include/libusb-1.0/libusb.h:1469
   pragma Import (C, libusb_alloc_transfer, "libusb_alloc_transfer");

   function libusb_submit_transfer (transfer : access libusb_transfer) return int;  -- /usr/include/libusb-1.0/libusb.h:1470
   pragma Import (C, libusb_submit_transfer, "libusb_submit_transfer");

   function libusb_cancel_transfer (transfer : access libusb_transfer) return int;  -- /usr/include/libusb-1.0/libusb.h:1471
   pragma Import (C, libusb_cancel_transfer, "libusb_cancel_transfer");

   procedure libusb_free_transfer (transfer : access libusb_transfer);  -- /usr/include/libusb-1.0/libusb.h:1472
   pragma Import (C, libusb_free_transfer, "libusb_free_transfer");

   procedure libusb_fill_control_transfer
     (transfer : access libusb_transfer;
      dev_handle : System.Address;
      buffer : access unsigned_char;
      callback : libusb_transfer_cb_fn;
      user_data : System.Address;
      timeout : unsigned);  -- /usr/include/libusb-1.0/libusb.h:1502
   pragma Import (C, libusb_fill_control_transfer, "libusb_fill_control_transfer");

   procedure libusb_fill_bulk_transfer
     (transfer : access libusb_transfer;
      dev_handle : System.Address;
      endpoint : unsigned_char;
      buffer : access unsigned_char;
      length : int;
      callback : libusb_transfer_cb_fn;
      user_data : System.Address;
      timeout : unsigned);  -- /usr/include/libusb-1.0/libusb.h:1533
   pragma Import (C, libusb_fill_bulk_transfer, "libusb_fill_bulk_transfer");

   procedure libusb_fill_interrupt_transfer
     (transfer : access libusb_transfer;
      dev_handle : System.Address;
      endpoint : unsigned_char;
      buffer : access unsigned_char;
      length : int;
      callback : libusb_transfer_cb_fn;
      user_data : System.Address;
      timeout : unsigned);  -- /usr/include/libusb-1.0/libusb.h:1561
   pragma Import (C, libusb_fill_interrupt_transfer, "libusb_fill_interrupt_transfer");

   procedure libusb_fill_iso_transfer
     (transfer : access libusb_transfer;
      dev_handle : System.Address;
      endpoint : unsigned_char;
      buffer : access unsigned_char;
      length : int;
      num_iso_packets : int;
      callback : libusb_transfer_cb_fn;
      user_data : System.Address;
      timeout : unsigned);  -- /usr/include/libusb-1.0/libusb.h:1590
   pragma Import (C, libusb_fill_iso_transfer, "libusb_fill_iso_transfer");

   procedure libusb_set_iso_packet_lengths (transfer : access libusb_transfer; length : unsigned);  -- /usr/include/libusb-1.0/libusb.h:1614
   pragma Import (C, libusb_set_iso_packet_lengths, "libusb_set_iso_packet_lengths");

   function libusb_get_iso_packet_buffer (transfer : access libusb_transfer; packet : unsigned) return access unsigned_char;  -- /usr/include/libusb-1.0/libusb.h:1638
   pragma Import (C, libusb_get_iso_packet_buffer, "libusb_get_iso_packet_buffer");

   function libusb_get_iso_packet_buffer_simple (transfer : access libusb_transfer; packet : unsigned) return access unsigned_char;  -- /usr/include/libusb-1.0/libusb.h:1680
   pragma Import (C, libusb_get_iso_packet_buffer_simple, "libusb_get_iso_packet_buffer_simple");

   function libusb_control_transfer
     (dev_handle : System.Address;
      request_type : stdint_h.uint8_t;
      bRequest : stdint_h.uint8_t;
      wValue : stdint_h.uint16_t;
      wIndex : stdint_h.uint16_t;
      data : access unsigned_char;
      wLength : stdint_h.uint16_t;
      timeout : unsigned) return int;  -- /usr/include/libusb-1.0/libusb.h:1700
   pragma Import (C, libusb_control_transfer, "libusb_control_transfer");

   function libusb_bulk_transfer
     (dev_handle : System.Address;
      endpoint : unsigned_char;
      data : access unsigned_char;
      length : int;
      actual_length : access int;
      timeout : unsigned) return int;  -- /usr/include/libusb-1.0/libusb.h:1704
   pragma Import (C, libusb_bulk_transfer, "libusb_bulk_transfer");

   function libusb_interrupt_transfer
     (dev_handle : System.Address;
      endpoint : unsigned_char;
      data : access unsigned_char;
      length : int;
      actual_length : access int;
      timeout : unsigned) return int;  -- /usr/include/libusb-1.0/libusb.h:1708
   pragma Import (C, libusb_interrupt_transfer, "libusb_interrupt_transfer");

   function libusb_get_descriptor
     (dev : System.Address;
      desc_type : stdint_h.uint8_t;
      desc_index : stdint_h.uint8_t;
      data : access unsigned_char;
      length : int) return int;  -- /usr/include/libusb-1.0/libusb.h:1724
   pragma Import (C, libusb_get_descriptor, "libusb_get_descriptor");

   function libusb_get_string_descriptor
     (dev : System.Address;
      desc_index : stdint_h.uint8_t;
      langid : stdint_h.uint16_t;
      data : access unsigned_char;
      length : int) return int;  -- /usr/include/libusb-1.0/libusb.h:1746
   pragma Import (C, libusb_get_string_descriptor, "libusb_get_string_descriptor");

   function libusb_get_string_descriptor_ascii
     (dev : System.Address;
      desc_index : stdint_h.uint8_t;
      data : access unsigned_char;
      length : int) return int;  -- /usr/include/libusb-1.0/libusb.h:1754
   pragma Import (C, libusb_get_string_descriptor_ascii, "libusb_get_string_descriptor_ascii");

   function libusb_try_lock_events (ctx : System.Address) return int;  -- /usr/include/libusb-1.0/libusb.h:1759
   pragma Import (C, libusb_try_lock_events, "libusb_try_lock_events");

   procedure libusb_lock_events (ctx : System.Address);  -- /usr/include/libusb-1.0/libusb.h:1760
   pragma Import (C, libusb_lock_events, "libusb_lock_events");

   procedure libusb_unlock_events (ctx : System.Address);  -- /usr/include/libusb-1.0/libusb.h:1761
   pragma Import (C, libusb_unlock_events, "libusb_unlock_events");

   function libusb_event_handling_ok (ctx : System.Address) return int;  -- /usr/include/libusb-1.0/libusb.h:1762
   pragma Import (C, libusb_event_handling_ok, "libusb_event_handling_ok");

   function libusb_event_handler_active (ctx : System.Address) return int;  -- /usr/include/libusb-1.0/libusb.h:1763
   pragma Import (C, libusb_event_handler_active, "libusb_event_handler_active");

   procedure libusb_lock_event_waiters (ctx : System.Address);  -- /usr/include/libusb-1.0/libusb.h:1764
   pragma Import (C, libusb_lock_event_waiters, "libusb_lock_event_waiters");

   procedure libusb_unlock_event_waiters (ctx : System.Address);  -- /usr/include/libusb-1.0/libusb.h:1765
   pragma Import (C, libusb_unlock_event_waiters, "libusb_unlock_event_waiters");

   function libusb_wait_for_event (ctx : System.Address; tv : access x86_64_linux_gnu_bits_time_h.timeval) return int;  -- /usr/include/libusb-1.0/libusb.h:1766
   pragma Import (C, libusb_wait_for_event, "libusb_wait_for_event");

   function libusb_handle_events_timeout (ctx : System.Address; tv : access x86_64_linux_gnu_bits_time_h.timeval) return int;  -- /usr/include/libusb-1.0/libusb.h:1768
   pragma Import (C, libusb_handle_events_timeout, "libusb_handle_events_timeout");

   function libusb_handle_events_timeout_completed
     (ctx : System.Address;
      tv : access x86_64_linux_gnu_bits_time_h.timeval;
      completed : access int) return int;  -- /usr/include/libusb-1.0/libusb.h:1770
   pragma Import (C, libusb_handle_events_timeout_completed, "libusb_handle_events_timeout_completed");

   function libusb_handle_events (ctx : System.Address) return int;  -- /usr/include/libusb-1.0/libusb.h:1772
   pragma Import (C, libusb_handle_events, "libusb_handle_events");

   function libusb_handle_events_completed (ctx : System.Address; completed : access int) return int;  -- /usr/include/libusb-1.0/libusb.h:1773
   pragma Import (C, libusb_handle_events_completed, "libusb_handle_events_completed");

   function libusb_handle_events_locked (ctx : System.Address; tv : access x86_64_linux_gnu_bits_time_h.timeval) return int;  -- /usr/include/libusb-1.0/libusb.h:1774
   pragma Import (C, libusb_handle_events_locked, "libusb_handle_events_locked");

   function libusb_pollfds_handle_timeouts (ctx : System.Address) return int;  -- /usr/include/libusb-1.0/libusb.h:1776
   pragma Import (C, libusb_pollfds_handle_timeouts, "libusb_pollfds_handle_timeouts");

   function libusb_get_next_timeout (ctx : System.Address; tv : access x86_64_linux_gnu_bits_time_h.timeval) return int;  -- /usr/include/libusb-1.0/libusb.h:1777
   pragma Import (C, libusb_get_next_timeout, "libusb_get_next_timeout");

   type libusb_pollfd is record
      fd : aliased int;  -- /usr/include/libusb-1.0/libusb.h:1785
      events : aliased short;  -- /usr/include/libusb-1.0/libusb.h:1791
   end record;
   pragma Convention (C_Pass_By_Copy, libusb_pollfd);  -- /usr/include/libusb-1.0/libusb.h:1783

   type libusb_pollfd_added_cb is access procedure
        (arg1 : int;
         arg2 : short;
         arg3 : System.Address);
   pragma Convention (C, libusb_pollfd_added_cb);  -- /usr/include/libusb-1.0/libusb.h:1804

   type libusb_pollfd_removed_cb is access procedure (arg1 : int; arg2 : System.Address);
   pragma Convention (C, libusb_pollfd_removed_cb);  -- /usr/include/libusb-1.0/libusb.h:1816

   function libusb_get_pollfds (ctx : System.Address) return System.Address;  -- /usr/include/libusb-1.0/libusb.h:1818
   pragma Import (C, libusb_get_pollfds, "libusb_get_pollfds");

   procedure libusb_set_pollfd_notifiers
     (ctx : System.Address;
      added_cb : libusb_pollfd_added_cb;
      removed_cb : libusb_pollfd_removed_cb;
      user_data : System.Address);  -- /usr/include/libusb-1.0/libusb.h:1820
   pragma Import (C, libusb_set_pollfd_notifiers, "libusb_set_pollfd_notifiers");

   subtype libusb_hotplug_callback_handle is int;  -- /usr/include/libusb-1.0/libusb.h:1836

   subtype libusb_hotplug_flag is unsigned;
   LIBUSB_HOTPLUG_ENUMERATE : constant libusb_hotplug_flag := 1;  -- /usr/include/libusb-1.0/libusb.h:1846

   subtype libusb_hotplug_event is unsigned;
   LIBUSB_HOTPLUG_EVENT_DEVICE_ARRIVED : constant libusb_hotplug_event := 1;
   LIBUSB_HOTPLUG_EVENT_DEVICE_LEFT : constant libusb_hotplug_event := 2;  -- /usr/include/libusb-1.0/libusb.h:1861

   type libusb_hotplug_callback_fn is access function
        (arg1 : System.Address;
         arg2 : System.Address;
         arg3 : libusb_hotplug_event;
         arg4 : System.Address) return int;
   pragma Convention (C, libusb_hotplug_callback_fn);  -- /usr/include/libusb-1.0/libusb.h:1889
